tests/checker/bad/return-bad6.scilla
scilla_version 0

(* Dead code after the return statement in match arms is forbidden *)

contract ReturnBad6()

procedure dead_code_in_match(a: Bool, b: Bool) : BNum
  match a with
  | True =>
    ret = _creation_block;
    _return := ret
  | False =>
    match b with
    | True =>
      ret = _creation_block;
      _return := ret
    | False =>
      ret = _creation_block;
      _return := ret;
      dead = _creation_block (* Error *)
    end
  end
end
procedure dead_code_in_match_fixed(a: Bool, b: Bool) : BNum
  match a with
  | True =>
    ret = _creation_block;
    _return := ret
  | False =>
    match b with
    | True =>
      ret = _creation_block;
      _return := ret
    | False =>
      ret = _creation_block;
      _return := ret
      (* Fixed *)
    end
  end
end

